TP04/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: mydeployment
  ports:
  - port: 80
    targetPort: 8080
